# ColorPlugin

./: LICENSE  README.md  pyproject.toml  requirements.txt
src/color_plugin/: __init__.py  color_plugin.py
src/color_plugin/src/: utils.py
src/endstone_color_plugin/: __init__.py  color_plugin.py
src/endstone_color_plugin/src/: packets.py  utils.py
