[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "endstone-color-plugin"
version = "0.0.2"
description = "Bedrock endstone plugin to colour other players' nicknames, visible only to the person who executed the command."

[project.entry-points."endstone"]
color-plugin = "endstone_color_plugin:ColorPlugin"